--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "marked": "^14.1.2",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^2.0.1",
     "path": "^0.12.7",
     "web-push": "^3.6.7"
   }
